# hydra

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  HowToCompile.txt  Intel_compile_0402.sh  Makefile  Makefile_G  Makefile_I  Makefile_old  README.md  beta_converter.c  build_me.sh  check_MPI_1_task_against_reference.sh  compile_code.sh  compile_code_G.sh  compile_with_gcc.sh  compile_with_gcc_ist.sh  compile_with_intel.sh  components_converter.c  epsilon_converter.c  generate_sbatch_scripts_for_benchmark.pl  generate_srun_scripts_for_benchmark.pl  mpi_gibbs.sbatch  mpirun_check_MPI_1_task_against_reference.sh  mpirun_convert_bed_to_sparse.sh  mpirun_read_from_sparse_vs_read_from_bed.sh  profile_MPI_version_with_Intel_Advisor.sh  run_all_bayes_tests.sh  run_me.sh  run_srun_benchmark_on_allocation.sh  sbatch_convert_bed_to_sparse.sh  srun_NA_test.sh  srun_bayes_test.sh  srun_check_MPI_1_task_against_reference.sh  srun_check_RAM_usage.sh  srun_convert_bed_to_sparse.sh  srun_groups.sh  srun_mixed_representation_processing.sh  (+2 more)
EPFL/data_processing/: run_all_bayes_tests.sh  srun_bayes_test.sh
benchmarking/: bench_gcc.sh  bench_intel.sh  profile_gcc_advisor.sh  profile_vtune-amplifier_and_advisor.sh
benchmarking/intel_mpi_benchmarks/: HOWTO
example/: Weibull.beta  Weibull.fail  Weibull.g  Weibull.h2  Weibull.phen  normal.annot  normal.beta  normal.g  normal.group  normal.h2  normal.mS  normal.phen  plot_example.R  t_M10K_N_5K.bim  t_M10K_N_5K.fam
examples/: ukb_example.sh
gctb/: main.cpp
gctb.xcodeproj/: project.pbxproj
gctb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gctb.xcodeproj/xcuserdata/j.zeng.xcuserdatad/xcschemes/: gctb.xcscheme  xcschememanagement.plist
postproc/: Makefile  beta_checker.cpp  combineCSV.sh  extractBeta.sh  extractCpn.sh  extract_non_zero_betaAll.cpp  extract_non_zero_cpnAll.cpp  extract_non_zero_cpnAll_test.cpp  postproc.R
scr/: Makefile  data.cpp  data.hpp  gadgets.cpp  gadgets.hpp  gctb.cpp  gctb.hpp  hsq.cpp  hsq.hpp  main.cpp  mcmc.cpp  mcmc.hpp  model.cpp  model.hpp  mympi.cpp  options.cpp  options.hpp  predict.cpp  predict.hpp  vgmaf.cpp  vgmaf.hpp  xci.cpp  xci.hpp
src/: $  .BayesW.cpp.swp  BayesFH.cpp  BayesFH.h  BayesPPToy.cpp  BayesPPToy.hpp  BayesRG.cpp  BayesRMmapToy.cpp  BayesRMmapToy.hpp  BayesRRg.cpp  BayesRRg.h  BayesRRg_test.cpp  BayesRRhp.cpp  BayesRRhp.h  BayesRRm.cpp  BayesRRm.h  BayesRRm_eo.cpp  BayesRRm_eo.h  BayesRRm_mt.cpp  BayesRRm_mt.h  BayesRRmz.cpp  BayesRRmz.hpp  BayesRRpp.cpp  BayesRRpp.h  BayesRRtoy.cpp  BayesRRtoy.hpp  BayesW.cpp  BayesW.hpp  BayesW_arms.cpp  BayesW_arms.h  CMakeLists.txt  Makefile  Makefile_CSCS  Makefile_EPFL  Makefile_G  Makefile_G_Unil  SET_EPFL_ENV.sh  SET_VITENV.sh  ars.hpp  bed_to_sparse.cpp  (+52 more)
tbb/cmake/: TBBConfig.cmake
test/: CMakeLists.txt  dataTest.cpp  functionTest.cpp  main.cpp
test.annot/: run.brr.sh  test.cva  test.group
test.annot/data/: uk10k_chr1_1mb.bim  uk10k_chr1_1mb.ragged.sparsebedindex
test.annot/output/: check.output.R
test.annot/phen/: g1.causal.snplist.txt  g2.causal.snplist.txt  test.phen  true.effects.txt  true.var.txt
test/data/: causal.snplist  test.par  test.phen
test/res/: test.covRes  test.inp  test.mcmcsamples.CovEffects  test.mcmcsamples.Par  test.mcmcsamples.SnpEffects  test.parRes  test.snpRes
